--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
+  flutter_native_splash: ^2.2.8
   google_fonts: ^3.0.1
   intl: ^0.17.0
 
