--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,18 @@ environment:
 dependencies:
   bloc: ^8.1.0
   carousel_slider: ^4.1.1
+  dashed_circle: ^0.0.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_dash: ^1.0.0
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.2.8
+  flutter_svg: ^1.1.4
   google_fonts: ^3.0.1
   intl: ^0.17.0
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   bloc_test: ^9.1.0
