--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_dash: ^1.0.0
   flutter_localizations:
     sdk: flutter
+  flutter_native_splash: ^2.2.8
   flutter_svg: ^1.1.4
   google_fonts: ^3.0.1
   hovering: ^1.0.4
@@ -35,3 +36,13 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/logo/
+    - assets/projects_photos/
+    - assets/skills_icons/
+
+
+
+
