--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: portfolio
-description: A Very Good Project created by Very Good CLI.
+description: portfolio
 version: 1.0.0+1
 publish_to: none
 
